--- a/manuscript.html
+++ b/manuscript.html
@@ -17,25 +17,6 @@
     div.column{display: inline-block; vertical-align: top; width: 50%;}
     div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
     ul.task-list{list-style: none;}
-    div.csl-bib-body { }
-    div.csl-entry {
-      clear: both;
-    }
-    .hanging div.csl-entry {
-      margin-left:2em;
-      text-indent:-2em;
-    }
-    div.csl-left-margin {
-      min-width:2em;
-      float:left;
-    }
-    div.csl-right-inline {
-      margin-left:2em;
-      padding-left:1em;
-    }
-    div.csl-indent {
-      margin-left: 2em;
-    }
   </style>
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
@@ -72,9 +53,9 @@
   <meta name="citation_fulltext_html_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/" />
   <meta name="citation_pdf_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
   <link rel="alternate" type="application/pdf" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
-  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/d3825eced5960eb578ca0457245b83c1e0171016/" />
-  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/d3825eced5960eb578ca0457245b83c1e0171016/" />
-  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/d3825eced5960eb578ca0457245b83c1e0171016/manuscript.pdf" />
+  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/625ca69a5e489daddba297a24aac1b527b03c307/" />
+  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/625ca69a5e489daddba297a24aac1b527b03c307/" />
+  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/625ca69a5e489daddba297a24aac1b527b03c307/manuscript.pdf" />
   <meta property="og:type" content="article" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" sizes="192x192" href="https://manubot.org/favicon-192x192.png" />
@@ -88,9 +69,9 @@
 </header>
 <p><small><em>
 This manuscript
-(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/d3825eced5960eb578ca0457245b83c1e0171016/">permalink</a>)
+(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/625ca69a5e489daddba297a24aac1b527b03c307/">permalink</a>)
 was automatically generated
-from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/d3825eced5960eb578ca0457245b83c1e0171016">uiceds/cee-492-term-project-fall-2022-jakt@d3825ec</a>
+from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/625ca69a5e489daddba297a24aac1b527b03c307">uiceds/cee-492-term-project-fall-2022-jakt@625ca69</a>
 on November 20, 2022.
 </em></small></p>
 <h2 id="authors">Authors</h2>
@@ -420,8 +401,7 @@ Finally, the key lesson learnt is that the developed model is as good as the dat
 <p><span class="semibold">References:</span></p>
 <p>[1] Karimi Monsefi, Amin, Sobhan Moosavi, and Rajiv Ramnath. “Will there be a construction? Predicting road constructions based on heterogeneous spatiotemporal data.”, <em>2022</em></p>
 <p>[2] Y. J. Kim, S. Choi, S. Briceno and D. Mavris, “A deep learning approach to flight delay prediction,” 2016 IEEE/AIAA 35th Digital Avionics Systems Conference (DASC), 2016, pp. 1-6, doi: 10.1109/DASC.2016.7778092.</p>
-<p><span class="citation" data-cites="1GGGHdsew">[<a href="#ref-1GGGHdsew" role="doc-biblioref">1</a>]</span></p>
-<p>[3] Keras sequential model, Tensorflow: <span class="citation" data-cites="tx7QnH2O">[<a href="#ref-tx7QnH2O" role="doc-biblioref">2</a>]</span></p>
+<p>[3] Keras sequential model, Tensorflow: https://keras.io/guides/sequential_model/</p>
 <p>[4] Understanding Categorical Cross-Entropy Loss, Binary Cross-Entropy Loss, Softmax Loss, Logistic Loss, Focal loss, and all those confusing names: https://gombru.github.io/2018/05/23/cross_entropy_loss/</p>
 <p>[5] When to Use One-Hot Encoding in Deep Learning? https://analyticsindiamag.com/when-to-use-one-hot-encoding-in-deep-learning/</p>
 <p>[6] Constructing a Multi-Class Classifier Using Neural Network with Python: https://www.youtube.com/watch?v=2WdPdE2hq78</p>
@@ -429,14 +409,6 @@ Finally, the key lesson learnt is that the developed model is as good as the dat
 <p>[8] A Gentle Introduction To Sigmoid Function: https://machinelearningmastery.com/a-gentle-introduction-to-sigmoid-function/</p>
 <p>[9] Stochastic Gradient Descent – Clearly Explained!! https://towardsdatascience.com/stochastic-gradient-descent-clearly-explained-53d239905d31</p>
 <p>[10] Confusion Matrix with Sklearn: https://scikit-learn.org/stable/modules/generated/sklearn.metrics.confusion_matrix.html</p>
-<div id="refs" class="references csl-bib-body" role="doc-bibliography">
-<div id="ref-1GGGHdsew" class="csl-entry" role="doc-biblioentry">
-<div class="csl-left-margin">1. </div><div class="csl-right-inline"><strong>Open collaborative writing with Manubot</strong> <div class="csl-block">Daniel S Himmelstein, Vincent Rubinetti, David R Slochower, Dongbo Hu, Venkat S Malladi, Casey S Greene, Anthony Gitter</div> <em>Manubot</em> (2020-05-25) <a href="https://greenelab.github.io/meta-review/">https://greenelab.github.io/meta-review/</a></div>
-</div>
-<div id="ref-tx7QnH2O" class="csl-entry" role="doc-biblioentry">
-<div class="csl-left-margin">2. </div><div class="csl-right-inline"><strong>Keras documentation: The Sequential model</strong> <div class="csl-block">Keras Team</div> <a href="https://keras.io/guides/sequential_model/">https://keras.io/guides/sequential_model/</a></div>
-</div>
-</div>
 <!-- default theme -->
 
 <style>
