--- a/v/latest/index.html
+++ b/v/latest/index.html
@@ -72,9 +72,9 @@
   <meta name="citation_fulltext_html_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/" />
   <meta name="citation_pdf_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
   <link rel="alternate" type="application/pdf" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
-  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/5bd1953aff9c6f6b6e09ec0bfd6fa4c4ac9e22ea/" />
-  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/5bd1953aff9c6f6b6e09ec0bfd6fa4c4ac9e22ea/" />
-  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/5bd1953aff9c6f6b6e09ec0bfd6fa4c4ac9e22ea/manuscript.pdf" />
+  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/7c0503b476bd0640a1387c7ccc5b6168d9595bf3/" />
+  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/7c0503b476bd0640a1387c7ccc5b6168d9595bf3/" />
+  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/7c0503b476bd0640a1387c7ccc5b6168d9595bf3/manuscript.pdf" />
   <meta property="og:type" content="article" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" sizes="192x192" href="https://manubot.org/favicon-192x192.png" />
@@ -88,9 +88,9 @@
 </header>
 <p><small><em>
 This manuscript
-(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/5bd1953aff9c6f6b6e09ec0bfd6fa4c4ac9e22ea/">permalink</a>)
+(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/7c0503b476bd0640a1387c7ccc5b6168d9595bf3/">permalink</a>)
 was automatically generated
-from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/5bd1953aff9c6f6b6e09ec0bfd6fa4c4ac9e22ea">uiceds/cee-492-term-project-fall-2022-jakt@5bd1953</a>
+from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/7c0503b476bd0640a1387c7ccc5b6168d9595bf3">uiceds/cee-492-term-project-fall-2022-jakt@7c0503b</a>
 on November 20, 2022.
 </em></small></p>
 <h2 id="authors">Authors</h2>
@@ -338,7 +338,9 @@ Fig 1. Confusion matrix for case 1 test dataset with 3 hidden layers of 32, 64, 
 <p align="justify">
 65% accuracy was obtained on the training data, with a loss of about 0.6. The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset.
 </p>
+<p align="center">
 <img src="images/Figure%202.png" title="fig:" />
+</p>
 <p align="justify">
 Fig 2. Confusion matrix for case 1 test dataset with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively.
 </p>
@@ -355,7 +357,9 @@ Recall: 0.22, 0.72, 0.19, for labels 1, 2, and 3 respectively
 <p align="justify">
 Proportion of each class in original dataset: 25%, 65% and 0.1% for label 1, 2 and 3 respectively
 </p>
+<p align="center">
 <img src="images/Figure%203.png" title="fig:" />
+</p>
 <p align="justify">
 Fig 3. Confusion matrix for case 2 test dataset (i.e., case 1 dataset in PCA coordinate frame), with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively.
 </p>
@@ -372,7 +376,9 @@ Recall: 0.06, 0.95, 0.06, for labels 1, 2, and 3 respectively
 <p align="justify">
 Proportion of each class in original dataset: 25%, 65% and 0.1% for label 1, 2 and 3 respectively
 </p>
+<p align="center">
 <img src="images/Figure%204.png" title="fig:" />
+</p>
 <p align="justify">
 Confusion matrix for case 2 validation dataset, with 7 hidden layers with 32, 64, 128, 256, 128, 64 and 32 neurons respectively. 68% accuracy was obtained on the training data, with a loss of about 0.7
 </p>
@@ -386,14 +392,18 @@ Recall: 0.08, 0.96, 0.11, for labels 1, 2, and 3 respectively
 <p align="justify">
 Proportion of each class in original dataset: 25%, 65% and 0.1% for label 1, 2 and 3 respectively
 </p>
+<p align="center">
 <img src="images/Figure%205.png" title="fig:" />
+</p>
 <p align="justify">
 Confusion matrix for case 3 test dataset with 3 hidden layers of 32, 64, and 128 neurons respectively. 65% accuracy was obtained on the training data, with a loss of about 0.9
 </p>
 <p align="justify">
 The accuracy on the training dataset was suboptimal and hence, no testing was performed on this dataset.
 </p>
+<p align="center">
 <img src="images/Figure%206.png" title="fig:" />
+</p>
 <p align="justify">
 CConfusion matrix for case 3 test dataset with 7 hidden layers of 32, 64, 128, 256, 128, 64 and 32 neurons respectively. 78% accuracy was obtained on the training data, with a loss of about 0.5
 </p>
